--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "pg": "^8.13.1",
     "resend": "^4.0.1",
+    "sequelize": "^6.37.5",
+    "sqlite3": "^5.1.7",
     "validator": "^13.12.0"
   },
   "devDependencies": {
