--- a/.env
+++ b/.env
@@ -3,5 +3,6 @@ DATABASE_USER = postgres
 DATABASE_PASSWORD = Newuser@123
 DATABASE_HOST = localhost
 DATABASE_PORT = 5432
+NODE_ENV = "development"
 
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
