--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "pg": "^8.13.1",
     "resend": "^4.0.1",
     "sequelize": "^6.37.5",
+    "sequelize-cli": "^6.6.2",
     "sqlite3": "^5.1.7",
     "validator": "^13.12.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/sequelize": "^4.28.20",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2"
   }
